[project]
name = "leetcode"
version = "0.1.0"
description = "Here were hava the most important exercice to develop knowledge in python, algorithmic, and SDD (source : leetcode.com)"
authors = [
    {name = "TchappiR",email = "tchappiromaric@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
